<resources>
    <string name="app_name">Order Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_home_content">Oder your dream food</string>
    <string name="home_content">Cocodak</string>
    <string name="home_slogan">Order your dream food</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="sign_in">sign in</string>
    <string name="sign_in1">Sign in</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_register">Already Register ?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="join_us">Join us.</string>
    <string name="create_account_to_continue">Create account to continue!</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="thinhgiadoan">ThinhgiaDoan</string>
    <string name="giathinhkg1_gmail_com">giathinhkg1@gmail.com</string>
    <string name="log_out">Log out</string>
    <string name="search_your_food">Search your Food !</string>
    <string name="menu">Menu</string>
    <string name="what_do_you_want">What do you want ?</string>
    <string name="chicken">Chicken</string>
    <string name="what_do_you_want_in">What do you want in</string>
    <string name="categories">Categories</string>
    <string name="snow_cheese_chicken">Snow Cheese Chicken</string>
    <string name="_8_00_am_22_00_pm">8:00 AM - 22:00 PM</string>
    <string name="popular">Popular</string>
    <string name="cash">Cash</string>
    <string name="_53_96">$53.96</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="_4_9">4.9</string>
    <string name="description">Description</string>
    <string name="_25_min">25 min</string>
    <string name="your_favourite_food_in_home">Your favourite food in home</string>
    <string name="view_more">View More</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="verification">Verification</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="send">Send</string>
    <string name="everyone">Everyone</string>
    <string name="get_started">Get Started</string>
    <string name="offers_discounts"><![CDATA[Offers & Discounts]]></string>
    <string name="new_food">New Food</string>
    <string name="notification">Notification</string>
    <string name="infomation">Infomation</string>
    <string name="change">Change</string>
    <string name="_012345678">012345678</string>
    <string name="my_order">My Order</string>
    <string name="payment_history">Payment History</string>
    <string name="change_password">Change Password</string>
    <string name="your_password">Your Password</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="favourite_food">Favourite Food</string>
    <string name="change_information">Change Information</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="save">Save</string>
    <string name="delivery">Delivery</string>
    <string name="user_name">User name</string>
    <string name="confirm_password1">Confirm password</string>
    <string name="buy_now">Buy Now</string>
    <string name="my">My</string>
    <string name="card">Card</string>
    <string name="_2">- 2 +</string>
    <string name="profile">Profile</string>
    <string name="tran_gia_hao">Tran Gia Hao</string>
    <string name="edit">Edit</string>
    <string name="my_oder">My oder</string>
    <string name="payment">Payment</string>
    <string name="see_all">See All</string>
    <string name="address_details">Address details</string>
    <string name="_53_99">$53.99</string>
    <string name="payment_method">Payment method</string>
    <string name="_01">01</string>
    <string name="or">Or</string>
    <string name="sign_up_with_social_media">Sign up with social media</string>
    <string name="trangiahao0401_gmail_com">trangiahao0401@gmail.com</string>
    <string name="thinh123">thinh123</string>
    <string name="thinh1234">Thinh123</string>
    <string name="food">Food</string>
    <string name="_1">1</string>
    <string name="cart">Cart</string>
    <string name="_14_99">14.99</string>
    <string name="your_phone_number">Your phone number</string>

    <string name="facebook_app_id">203911645233187</string>
    <string name="fb_login_protocol_scheme">fb203911645233187</string>

</resources>